fixed man sky board

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="main-anim">
-        <svg width="100%"  viewBox="0 0 1148 674" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg width="600px" height="500px"  viewBox="0 0 1148 674" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g id="posible 1">
             <path id="Vector" d="M292.296 621.129C308.22 650.673 342.016 663.356 342.016 663.356C342.016 663.356 349.994 628.138 334.071 598.594C318.147 569.05 284.35 556.367 284.35 556.367C284.35 556.367 276.372 591.585 292.296 621.129Z" fill="#3F3D56"/>
             <path id="Vector_2" d="M303.242 611.41C331.991 628.714 343.063 663.084 343.063 663.084C343.063 663.084 307.524 669.399 278.775 652.095C250.025 634.791 238.953 600.421 238.953 600.421C238.953 600.421 274.493 594.106 303.242 611.41Z" fill="#39B8B8"/>
